--- a/WCCCSite/src/components/header/header.pug
+++ b/WCCCSite/src/components/header/header.pug
@@ -1,4 +1,4 @@
 include ../../util/include/include-script
 +include-script('/resources/js/header.js')
 header
-    
+    include ../nav-menu/nav-menu
