--- a/WCCCSite/src/components/header/header.scss
+++ b/WCCCSite/src/components/header/header.scss
@@ -1,10 +1,9 @@
+
 header{
     width: 100%;
-    background-color: #5B7BB2;
-    text-align: center;
-    color: white;
-
-    h1{
-        margin: 0;
+    text-align: right;
+    
+    .nav-menu{
+        margin-right: 2em;
     }
 }
