Fixed slider overlapping menu

--- a/WCCCSite/src/components/header/header.pug
+++ b/WCCCSite/src/components/header/header.pug
@@ -2,3 +2,4 @@ include ../../util/include/include-script
 +include-script('/resources/js/header.js')
 header
     include ../nav-menu/nav-menu
+    include ../image-slider/image-slider
