--- a/WCCCSite/src/components/image-slider/image-slider.scss
+++ b/WCCCSite/src/components/image-slider/image-slider.scss
@@ -1,53 +1,62 @@
 .image-slider{
-    height: 100%;
     position: relative;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 
-    .image-slider-images{
-        width: 100%;
-        height: 100%;
+    .image-slider-content{
+        position: relative;
+        overflow: hidden;
+        flex-grow: 1;
 
-        .image-slider-image{    
-            position: absolute;
-            top: 0; bottom: 0; left: 0; right: 0;
-            background-position: center center;
-            background-size: cover;
-            background-repeat: no-repeat;
-            transition: opacity 1s ease-in-out, transform 15s ease-in-out;
-            opacity: 0;
-
-            &.image-slider-image-active{
-                opacity: 1;
-                transform: scale(1.5);
-            }
-        }
-    }
-
-    .image-slider-buttons{
-        position: absolute;
-        margin: auto 0;
-        top: 0; bottom: 0;
-        height: 2.5em;
-        width: 100%;
-
-        .image-slider-button{
-            width: 2.5em;
+        .image-slider-images{
+            width: 100%;
             height: 100%;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center center;
-            transition: 0.33s transform ease-in-out;
 
-            &:hover{
-                transform: scale(1.25);
-            }
+            .image-slider-image{    
+                position: absolute;
+                top: 0; bottom: 0; left: 0; right: 0;
+                background-position: center center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                transition: opacity 1s ease-in-out, transform 15s ease-in-out;
+                opacity: 0;
 
-            &.image-slider-button-left{
-                float: left;
+                &.image-slider-image-active{
+                    opacity: 1;
+                    transform: scale(1.5);
+                }
             }
-            &.image-slider-button-right{
-                float: right;
+        }
+
+        .image-slider-buttons{
+            position: absolute;
+            margin: auto 0;
+            top: 0; bottom: 0;
+            height: 2.5em;
+            width: 100%;
+
+            .image-slider-button{
+                width: 2.5em;
+                height: 100%;
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center center;
+                transition: 0.33s transform ease-in-out;
+
+                &:hover{
+                    transform: scale(1.25);
+                }
+
+                &.image-slider-button-left{
+                    float: left;
+                }
+                &.image-slider-button-right{
+                    float: right;
+                }
             }
         }
     }
+
+    
 }
