--- a/WCCCSite/src/layouts/page-layout.pug
+++ b/WCCCSite/src/layouts/page-layout.pug
@@ -1,7 +1,6 @@
 doctype html
 include ../util/include/include-css
--var cssDir = '/resources/css/styles.css'
--var wordpressPHP = '<?php echo get_template_directory_uri().\''+cssDir+'\'?>'
+include ../util/include/include-script
 
 if wordpress
     <?php get_header() ?>
@@ -10,6 +9,7 @@ html
         block title
             title The title
         script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+        +include-script('/resources/js/parallax.js')
         +include-css('/resources/css/styles.css')
      
     body
