--- a/WCCCSite/src/resources/sass/main.scss
+++ b/WCCCSite/src/resources/sass/main.scss
@@ -1,4 +1,13 @@
+@import './_fonts.scss';
+
 body{
     margin: 0;
     padding: 0;
+}
+
+.title-heading{
+    font-family: $open-sans;
+    font-size: 3em;
+    font-weight: 300;
+    letter-spacing: 0.5em;
 }
