--- a/WCCCSite/src/resources/sass/_fonts.scss
+++ b/WCCCSite/src/resources/sass/_fonts.scss
@@ -1,2 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
 $open-sans: 'Open Sans', sans-serif;
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+$raleway: 'Raleway', sans-serif;
