--- a/WCCCSite/src/resources/sass/main.scss
+++ b/WCCCSite/src/resources/sass/main.scss
@@ -6,8 +6,14 @@ body{
 }
 
 .title-heading{
-    font-family: $open-sans;
+    font-family: $raleway;
+    margin: 0 0 1em;
     font-size: 3em;
     font-weight: 300;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.3em;
+    text-transform: lowercase;
+}
+
+.section{
+    padding: 4em 0;
 }
