Added parallax to who-we-are section

--- a/WCCCSite/src/components/who-we-are/who-we-are.pug
+++ b/WCCCSite/src/components/who-we-are/who-we-are.pug
@@ -1,6 +1,6 @@
-div(class="who-we-are")
+div(class="who-we-are section parallax-container")
     h1(class="title-heading") Who We Are
-    div(class="who-we-are-content")
+    div(class="who-we-are-content parallax-element")
         each person in whoWeAre.people
             div(class="who-we-are-person")
                 div(class="who-we-are-picture" style="background-image: url(" + person.photo + ")")
