--- a/WCCCSite/src/pages/index.pug
+++ b/WCCCSite/src/pages/index.pug
@@ -1,7 +1,11 @@
 extends ../layouts/page-layout
 
 block title
-    title this is the title
+    title West Central Community Center
 
 block content
     include ../components/header/header
+    include ../components/image-slider/image-slider
+    include ../components/where-we-are/where-we-are
+    include ../components/who-we-are/who-we-are
+
