New font for title headings

--- a/WCCCSite/src/resources/sass/main.scss
+++ b/WCCCSite/src/resources/sass/main.scss
@@ -6,14 +6,9 @@ body{
 }
 
 .title-heading{
-    font-family: $raleway;
-    margin: 0 0 1em;
+    font-family: $alegreya;
     font-size: 3em;
     font-weight: 300;
     letter-spacing: 0.3em;
     text-transform: lowercase;
-}
-
-.section{
-    padding: 4em 0;
 }
