--- a/WCCCSite/src/components/image-slider/image-slider.scss
+++ b/WCCCSite/src/components/image-slider/image-slider.scss
@@ -1,13 +1,16 @@
+@import '../../resources/sass/_colors.scss';
+
 .image-slider{
     position: relative;
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    height: 30em;
 
     .image-slider-content{
         position: relative;
         overflow: hidden;
-        flex-grow: 1;
+        width: inherit;
+        height: inherit;
 
         .image-slider-images{
             width: 100%;
@@ -58,5 +61,28 @@
         }
     }
 
-    
+    .image-slider-indexes{
+        position: absolute;
+        bottom: 0; right: 0; left: 0;
+        width: 30%;
+        height: 2em;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .image-slider-index{
+            background-color: white;
+            border-radius: 100%;
+            width: 0.5em;
+            height: 0.5em;
+            border: 2px solid black;
+            transition: background-color 0.33s ease-in-out;
+
+            &.image-slider-index-active{
+                background-color: $gold;
+            }
+        }
+    }
+
 }
