Changed nav-menu styles

--- a/WCCCSite/src/components/nav-menu/nav-menu.scss
+++ b/WCCCSite/src/components/nav-menu/nav-menu.scss
@@ -19,18 +19,21 @@
                 >a{
                     font-weight:700; 
                     background-color: $gray;
+                    color: $white;
                 }
 
                 .nav-menu-main-child li{ //teiile the main menu child what to do what the tab is hovered over
                     display: block;
-                    background-color: $gray;
+                    background-color: $blue;
                     padding: 0;
+                    color: $white;
+
                     &:hover {
                         font-weight: 700;
                     }
 
                     &:first-child{
-                        border-top: 3px solid $blue;
+                        border-top: 3px solid $gold;
                     }
                    
                    &:after{
@@ -40,6 +43,7 @@
                    }
                    a{
                        float: left;
+                       color: $white;
                    }
                     
                 }
