correct spelling in comments

--- a/WCCCSite/src/components/nav-menu/nav-menu.scss
+++ b/WCCCSite/src/components/nav-menu/nav-menu.scss
@@ -21,7 +21,7 @@
                     background-color: $gray;
                 }
 
-                .nav-menu-main-child li{ //teiile the main menu child what to do what the tab is hovered over
+                .nav-menu-main-child li{ //telling the main menu child what to do what the tab is hovered over
                     display: block;
                     background-color: $gray;
                     padding: 0;
