Added footer —> auto updates copyright information

--- a/WCCCSite/src/layouts/page-layout.pug
+++ b/WCCCSite/src/layouts/page-layout.pug
@@ -10,6 +10,7 @@ html
             title The title
         script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
         +include-script('/resources/js/parallax.js')
+        +include-script('/resources/js/main.js')
         +include-css('/resources/css/styles.css')
      
     body
