--- a/WCCCSite/src/components/who-we-are/who-we-are.scss
+++ b/WCCCSite/src/components/who-we-are/who-we-are.scss
@@ -52,6 +52,10 @@
                 margin: 0;
                 font-size: 0.75em;
             }
+
+            @media (max-width: 580px){
+                width: 50%;
+            }
         }
     }
 }
