Added footer to homepage

--- a/WCCCSite/src/pages/index.pug
+++ b/WCCCSite/src/pages/index.pug
@@ -8,4 +8,4 @@ block content
     include ../components/image-slider/image-slider
     include ../components/where-we-are/where-we-are
     include ../components/who-we-are/who-we-are
-
+    include ../components/footer/footer
