--- a/WCCCSite/src/components/image-slider/image-slider.scss
+++ b/WCCCSite/src/components/image-slider/image-slider.scss
@@ -1,10 +1,57 @@
 @import '../../resources/sass/_colors.scss';
+@import '../../resources/sass/_fonts.scss';
 
 .image-slider{
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 30em;
+    height: 100vh;
+
+    .image-slider-slogan{
+        width: 80%;
+        height: 15em;
+        font-weight: 300;
+        color: $white;
+        text-shadow: 0px 0px 20px 20px black;
+        position: absolute;
+        top: 0; bottom: 0; left: 0; right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        margin: auto;
+        z-index: 3000;
+        transition: 1s;
+
+        &.image-slider-slogan-hidden{
+            opacity: 0;
+        }
+
+        .logo-container{
+            width: 10em;
+            height: 5em;
+            background-size: contain;
+            background-repeat: no-repeat; 
+            display: flex;
+        }
+
+        .image-slider-title{
+            text-transform: uppercase;
+            font-family: $alegreya;
+            font-size: 2em;
+            margin: 0;
+            text-shadow: 0 0 15px black;
+            display: flex;
+        }
+
+        .image-slider-tag{
+            text-transform: lowercase;
+            font-family: $open-sans;
+            font-size: 1em;
+            margin: 0;
+            text-shadow: 0 0 15px black;
+            display: flex;
+        }
+    }
 
     .image-slider-content{
         position: relative;
@@ -22,12 +69,17 @@
                 background-position: center center;
                 background-size: cover;
                 background-repeat: no-repeat;
-                transition: opacity 1s ease-in-out, transform 15s ease-in-out;
+                transition: opacity 1s ease-in-out, transform 15s ease-in-out, filter 1s ease-in-out;
                 opacity: 0;
+                filter: brightness(0.5);
 
                 &.image-slider-image-active{
                     opacity: 1;
                     transform: scale(1.5);
+                }
+
+                &.image-slider-image-bright{
+                    filter: brightness(1);
                 }
             }
         }
@@ -38,6 +90,7 @@
             top: 0; bottom: 0;
             height: 1.5em;
             width: 100%;
+            z-index: 1000;
 
             .image-slider-button{
                 width: 2.5em;
@@ -70,17 +123,19 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        z-index: 2000;
 
         .image-slider-index{
             background-color: white;
             border-radius: 100%;
             width: 0.35em;
             height: 0.35em;
-            border: 2px solid black;
             transition: background-color 0.33s ease-in-out;
+            border: 1px solid black;
+            opacity: 0.5;
 
             &.image-slider-index-active{
-                background-color: $gold;
+                opacity: 1;
             }
         }
     }
