Clear header background

--- a/WCCCSite/src/components/header/header.pug
+++ b/WCCCSite/src/components/header/header.pug
@@ -1,5 +1,5 @@
 include ../../util/include/include-script
 +include-script('/resources/js/header.js')
 header
-    div(class="logo-container" style="background-image: url(./resources/images/main_logo.png)")
+    div(class="header-background")
     include ../nav-menu/nav-menu
