--- a/WCCCSite/src/resources/sass/main.scss
+++ b/WCCCSite/src/resources/sass/main.scss
@@ -12,3 +12,16 @@ body{
     letter-spacing: 0.3em;
     text-transform: lowercase;
 }
+
+.vignette{
+    -moz-box-shadow: inset 0 0 10em black;  
+    -webkit-box-shadow: inset 0 0 10em black;   
+    box-shadow: inset 0 -5em 20em black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    content: "";
+}
