Updated contact form pug

--- a/WCCCSite/src/components/contact-form/contact-form.pug
+++ b/WCCCSite/src/components/contact-form/contact-form.pug
@@ -1,4 +1,3 @@
-
 div(class="contact-form")
     p CONTACT
     p Main Number:  509.326.9540
@@ -7,9 +6,9 @@ div(class="contact-form")
     form(action="contact-form")
       p Name
       p First name:
-      input(type="text" name="firstname")
+      input(type="text" name="Firstname")
       p Last name:
-      input(type="text" name="last name")
+      input(type="text" name="Last name")
       P Email:
       input(type="text" name="Email")
       p Phone:
