Media query for who-we-are section

--- a/WCCCSite/src/components/who-we-are/who-we-are.scss
+++ b/WCCCSite/src/components/who-we-are/who-we-are.scss
@@ -43,6 +43,11 @@
                 background-size: cover;
                 background-position: center center;
                 background-repeat: no-repeat;
+
+                @media (min-width: 800px){
+                    width: 50%;
+                    padding-bottom: 50%;
+                }
             }
             .who-we-are-name{
                 margin: 0.5em 0;
