Changed footer color

--- a/WCCCSite/src/components/footer/footer.scss
+++ b/WCCCSite/src/components/footer/footer.scss
@@ -4,8 +4,8 @@
 footer{
     height: 3em;
     font-family: $open-sans;
-    background-color: $blue;
-    color: $white;
+    background-color: $white;
+    color: $black;
     display: flex;
     align-items: center;
     justify-content: center;
