Made picture-btns parallax

--- a/WCCCSite/src/components/picture-btns/picture-btns.pug
+++ b/WCCCSite/src/components/picture-btns/picture-btns.pug
@@ -1,13 +1,15 @@
 include ../../util/include/include-script
 +include-script('/resources/js/picture-btns.js')
-div(class="picBtns")
-    div(class="btn" id="programs") 
-        div(class="lb") Programs
-    div(class="btn" id="calendar") 
-        div(class="lb") Calendar 
-    div(class="btn" id="giving") 
-        div(class="lb") Giving
-    div(class="btn" id="about") 
-        div(class="lb") About
-    div(class="btn" id="resources") 
-        div(class="lb") Resources
+div(class="picBtns parallax-container")
+    h1(class="title-heading") What We Do
+    div(class="picBtns-container parallax-element")
+        div(class="btn" id="programs") 
+            div(class="lb") Programs
+        div(class="btn" id="calendar") 
+            div(class="lb") Calendar 
+        div(class="btn" id="giving") 
+            div(class="lb") Giving
+        div(class="btn" id="about") 
+            div(class="lb") About
+        div(class="btn" id="resources")
+            div(class="lb") Resources
