--- a/WCCCSite/src/components/picture-btns/picture-btns.scss
+++ b/WCCCSite/src/components/picture-btns/picture-btns.scss
@@ -2,59 +2,67 @@
     margin: auto;
     width: 80%;
     text-align: center;
-    .btn{
-        display: inline-block;
-        margin: 10px;
-        border: none;
-        color: transparent;
-        font-family: Constantia;
-        font-size: 30px;
-        height: 250px;
-        @media screen and (max-width: "850px"){
-            margin: 5px;
-            height: 200px;
-            padding-top: 150px;
+
+    .picBtns-container{
+        position: relative;
+        margin-bottom: 3em;
+
+        .btn{
+            display: inline-block;
+            margin: 10px;
+            border: none;
+            color: transparent;
+            font-family: Constantia;
+            font-size: 30px;
+            height: 250px;
+            transition: 1s ease-in-out;
+
+            @media screen and (max-width: "850px"){
+                margin: 5px;
+                height: 200px;
+                padding-top: 150px;
+            }
+            .lb{
+                height: 40px;
+                background-color:black;
+                margin-top: 175px;
+                visibility: hidden;
+            }
         }
-        .lb{
-            height: 40px;
-            background-color:black;
-            margin-top: 175px;
-            visibility: hidden;
+        #resources{
+            width:25%;
+            background: url('/resources/images/picture-btns/res.JPG');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
         }
-    }
-    #resources{
-        width:25%;
-        background: url('/resources/images/res.JPG');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-    }
-    #giving{
-        width:25%;
-        background: url('/resources/images/give.JPG');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-    }
-    #calendar{
-        width:51.5%;
-        background: url('/resources/images/building_dreams.JPG');
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center center;
-    }
-    #about{
-        width:40%;
-        background: url('/resources/images/about.JPG');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-    }
-    #programs{
-        width:40%;
-        background: url('/resources/images/WIC-4.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
+        #giving{
+            width:25%;
+            background: url('/resources/images/picture-btns/give.JPG');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
+        #calendar{
+            width:51.5%;
+            background: url('/resources/images/picture-btns/building_dreams.JPG');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center center;
+        }
+        #about{
+            width:40%;
+            background: url('/resources/images/picture-btns/about.JPG');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
+        #programs{
+            width:40%;
+            background: url('/resources/images/picture-btns/WIC-4.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
     }
 }
