--- a/WCCCSite/src/resources/sass/main.scss
+++ b/WCCCSite/src/resources/sass/main.scss
@@ -13,6 +13,13 @@ body{
     text-transform: lowercase;
 }
 
+.sub-heading{
+    font-family: $open-sans;
+    font-size: 1.5em;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
 .vignette{
     -moz-box-shadow: inset 0 0 10em black;  
     -webkit-box-shadow: inset 0 0 10em black;   
@@ -24,4 +31,8 @@ body{
     height: 100%;
     z-index: 2;
     content: "";
+}
+
+.parallax-element{
+    position: relative;
 }
