--- a/WCCCSite/src/components/contact-form/contact-form.scss
+++ b/WCCCSite/src/components/contact-form/contact-form.scss
@@ -1,14 +1,55 @@
+@import '../../resources/sass/_colors.scss';
+@import '../../resources/sass/_fonts.scss';
+
 .contact-form{
-  background-color: blue;
-  text-align: center;
-  .submit-button{
-    display:block;
-    margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  background-color: $blue;
+  color: $white;
+  padding-bottom: 5em;
 
+  h1{
+    text-align: center;
+    color: white;
   }
-  .contact-form-message{
-   width:20em;
-   height:15em;
 
+  .contact-form-container{
+    position: relative;
+    font-family: $open-sans;
+    display: flex;
+    flex-direction: row;
+
+    .contact-form-info{
+      flex: 1;
+      display: flex;
+      align-items: center;
+      border-right: 2px solid $gold;
+      justify-content: center;
+    }
+
+    .contact-form-form{
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      >:first-child{
+        width: 80%;
+      }
+
+      .contact-form-text-box{
+        width: 100%;
+      }
+
+      .submit-button{
+        display:block;
+        margin: 0 auto;
+      }
+
+      .contact-form-message{
+        width:100%;
+        height:15em;
+      }
+    }
   }
 }
