--- a/WCCCSite/src/pages/index.pug
+++ b/WCCCSite/src/pages/index.pug
@@ -6,6 +6,8 @@ block title
 block content
     include ../components/header/header
     include ../components/image-slider/image-slider
+    include ../components/picture-btns/picture-btns
     include ../components/where-we-are/where-we-are
     include ../components/who-we-are/who-we-are
+    include ../components/contact-form/contact-form
     include ../components/footer/footer
