--- a/WCCCSite/src/layouts/page-layout.pug
+++ b/WCCCSite/src/layouts/page-layout.pug
@@ -9,6 +9,7 @@ html
         block title
             title The title
         script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+        script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js")
         +include-script('/resources/js/parallax.js')
         +include-script('/resources/js/main.js')
         +include-css('/resources/css/styles.css')
